re-style spacing for quiz question and answers to avoid clipping issue

--- a/components/QuizQuestions/QuizQuestions.module.css
+++ b/components/QuizQuestions/QuizQuestions.module.css
@@ -1,10 +1,11 @@
 .mainWrapper {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
   padding-top: 150px;
-  height: 100%;
   width: 100%;
+  height: 100%;
 }
 .answerWrapper {
   width: 100%;
@@ -12,7 +13,6 @@
   flex-direction: row;
   justify-content: space-evenly;
   gap: 10px;
-  position: fixed;
   bottom: 20px;
 
   @media (width < 500px) {
@@ -29,7 +29,6 @@
   padding-right: 50px;
   text-align: center;
   line-height: 1.5;
-  max-height: 50%;
 
   @media (width > 1200px) {
     font-size: 4rem;
